fix: custom amount spacing

--- a/packages/join-flow/scss/components/forms.scss
+++ b/packages/join-flow/scss/components/forms.scss
@@ -103,6 +103,7 @@ select.form-control {
   align-items: center;
   display: flex;
   gap: 0.25rem;
+  margin-bottom: 0.5rem;
 
   .form-group {
     margin-bottom: 0;
